trunk/Archive2/09/f890184d9345a0/output
main.cpp: In function 'int g(int)':
main.cpp:12:15: error: 'df' was not declared in this scope
     return n1;df
               ^
main.cpp:13:1: error: expected ';' before '}' token
 }
 ^
